[gd_scene load_steps=7 format=3 uid="uid://b7jjxgbt4wd6n"]

[ext_resource type="Texture2D" uid="uid://coa0j7di6iryb" path="res://Assets/UI/splash_background.png" id="1_cdr4s"]
[ext_resource type="Script" path="res://Menus/SelectLevel/select_level.gd" id="1_cxafi"]
[ext_resource type="Texture2D" uid="uid://ckmttc0nd4jrd" path="res://Assets/UI/UI_batch2/back_default.png" id="2_ghw0f"]
[ext_resource type="Texture2D" uid="uid://bqp2wmjvjqpp2" path="res://Assets/UI/selectlevel_hover.png" id="2_s1ykv"]
[ext_resource type="Texture2D" uid="uid://ncgxynmdohdr" path="res://Assets/UI/UI_batch2/back_press.png" id="3_1b3ps"]
[ext_resource type="Texture2D" uid="uid://u5wgx5ksmdiv" path="res://Assets/UI/UI_batch2/back_hover.png" id="4_k453e"]

[node name="SelectLevel" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 644.0
offset_bottom = 321.0
script = ExtResource("1_cxafi")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 41.0
offset_top = -10.0
offset_right = 181.0
offset_bottom = 70.0
texture_normal = ExtResource("2_ghw0f")
texture_pressed = ExtResource("3_1b3ps")
texture_hover = ExtResource("4_k453e")
texture_focused = ExtResource("4_k453e")
ignore_texture_size = true
stretch_mode = 3

[node name="SplashBackground" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(330, 169)
scale = Vector2(0.72479, 0.72479)
texture = ExtResource("1_cdr4s")

[node name="SelectlevelHover" type="Sprite2D" parent="."]
position = Vector2(316, 26)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_s1ykv")

[node name="LevelGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = 99.0
offset_right = 796.0
offset_bottom = 278.0
scale = Vector2(0.4, 0.4)
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 5
columns = 5

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
